fdo#66969: Set selected page name after building all dimension members.

Because the new implementation relies on the visiblity flag of the
dimension members, they need to exist before setting currently selected
page, which is still used in documents generated by the older version of
LibreOffice.

Change-Id: I6cec5fd3d2165f714fc01b596d3761890d87a4ff